--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,6 +1,7 @@
 <div class="row justify-content-center banner">
   <div class="col-12 d-flex flex-column justify-content-center align-items-center h-100">
-    <%= image_tag 'placeholder.png', alt: "profile photo", class: 'avatar' %>
-    <h1 class="title-main">Portfolio</h1>
+    <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'avatar' %>
+    <h1 class="title-main">Hey 👋 I'm Sammy Kavanagh!</h1>
+    <p>A front end developer from Dublin 🇮🇪, based in Tokyo 🇯🇵.</p>
   </div>
 </div>
