--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -2,7 +2,13 @@
   <div class="col-12">
     <div class="container">
       <div id="projects">
-        <h2> Projects</h2>
+        <h2> My Projects</h2>
+        <p>Please check out some of the solo and group projects I've worked on!</p>
+        <p>For more please check out my
+          <a href="https://github.com/sammyxxi">
+            <i class="fab fa-github-alt"></i>
+            Github</a>
+          .</p>
         <div class="cards">
           <% data.projects.each do |project| %>
             <div class="card-product">
