display stack on cards

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -21,6 +21,7 @@
                   <% end %>
                 </div>
                 <p><%= project.description %></p>
+                <p><%= project.stack %></p>
               </div>
             </div>
           <% end %>
