added role to projects

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -20,6 +20,7 @@
                     <i class="fas fa-external-link-alt"></i>
                   <% end %>
                 </div>
+                <p><%= project.role %></p>
                 <p><%= project.description %></p>
                 <p><%= project.stack %></p>
               </div>
