--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -5,8 +5,8 @@
         <h2>About me</h2>
         <p>I'm a web developer and have been living in Tokyo since May, 2022. I've always had an inquisitive nature which has led me to study a wide variety of topics. In December 2022, I completed the <a href="https://www.lewagon.com/tokyo">🗼LeWagon Bootcamp</a> (9-week intensive coding program). Before this, I obtained a very unique combo of a MSc in marketing and a BSc in zoology.
         </p>
-        <p>I love how front end development allows me to combine both my creative side with the technical skills I have learned from coding.</p>
-        <p>In my free time, I enjoy hunting for the best iced coffee in Tokyo, watching nature documentaries hosted by my all time hero, David Attenborough, and developing my home yoga practice.</p>
+        <p>I love how front end development allows me to combine both my creative side with the technical skills I have learned from coding. Working on front end development has resparked my desire to learn and I'm really excited to see what I will create.</p>
+        <p>In my free time, I enjoy hunting for the best iced coffee in Tokyo, watching nature documentaries hosted by my all time hero, David Attenborough, and developing my home yoga practice. Feel free to <a href="mailto: sammykav25@gmail.com">reach out ✉️</a> to me anytime!</p>
       </div>
     </div>
   </div>
