added basic scss to banner

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -1,13 +1,15 @@
-<div class="col-12 my-3 py-4 px-2 d-flex flex-column justify-content-center align-items-center h-100">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-4 col-md-2">
-        <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'rounded-circle w-100' %>
-      </div>
-      <div class="col-8 col-md-10">
-        <h1 class="title-main">Hey <span class="wave">👋</span> I'm Sammy Kavanagh!</h1>
-        <p>A front end developer from Dublin 🇮🇪, based in Tokyo 🇯🇵.</p>
-        <p>HTML || CSS/SCSS || JavaScript || React || Rails ||</p>
+<div id="banner">
+  <div class="col-12 my-3 py-4 px-2 d-flex flex-column justify-content-center align-items-center h-100">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-4 col-md-2">
+          <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'rounded-circle w-100' %>
+        </div>
+        <div class="col-8 col-md-10">
+          <h1 class="title-main">Hey <span class="wave">👋</span> I'm Sammy Kavanagh!</h1>
+          <p>A front end developer from Dublin 🇮🇪, based in Tokyo 🇯🇵.</p>
+          <p>HTML || CSS/SCSS || JavaScript || React || Rails</p>
+        </div>
       </div>
     </div>
   </div>
