--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,1 +1,10 @@
 // Specific CSS for your home-page
+h1, h2 {
+  color: #5AA9E6;
+}
+
+a {
+  color: #7FC8F8;
+  text-decoration: none;
+  font-weight: bold;
+}
