--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -2,6 +2,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
+  background-color: white;
+  border-radius: 4px;
+  margin: 16px;
+  padding: 16px;
 }
 
 .card-product {
