--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -9,7 +9,7 @@
             <i class="fab fa-github-alt"></i>
             Github</a>
           .</p>
-        <div class="cards">
+        <div class="project-cards">
           <% data.projects.each do |project| %>
             <div class="card-product">
               <%= image_tag project.image, alt: "project image" %>
