updated banner text

--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -6,7 +6,8 @@
           <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'rounded-circle w-100' %>
         </div>
         <div class="col-8 col-md-10">
-          <h1 class="title-main">Hey <span class="wave">👋</span> I'm Sammy Kavanagh!</h1>
+          <h1 class="title-main">Hey <span class="wave">👋</span></h1>
+          <h1>I'm Sammy Kavanagh!</h1>
           <p>A front end developer from Dublin 🇮🇪, based in Tokyo 🇯🇵.</p>
           <p>HTML || CSS/SCSS || JavaScript || React || Rails</p>
         </div>
