--- a/source/stylesheets/components/_banner.scss
+++ b/source/stylesheets/components/_banner.scss
@@ -7,8 +7,10 @@
 
 #banner h1 {
   font-size: 64px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 #banner p {
   font-size: 20px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
