--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -2,10 +2,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
-  background-color: white;
   border-radius: 4px;
-  margin: 16px 0;
-  padding: 24px;
+  margin: 16px;
 }
 
 .about-cards {
