--- a/source/partials/banner.html.erb
+++ b/source/partials/banner.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-4 col-md-2">
-          <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'rounded-circle w-100' %>
+          <%= image_tag 'avatar.jpg', alt: "profile photo", class: 'rounded float-left w-100' %>
         </div>
         <div class="col-8 col-md-10">
           <h1 class="title-main">Hey <span class="wave">👋</span></h1>
