removed one container from all sections

--- a/source/partials/projects.html.erb
+++ b/source/partials/projects.html.erb
@@ -1,6 +1,6 @@
 <div class="row my-2">
   <div class="col-12">
-    <div class="container px-0">
+    <div>
       <div id="projects">
         <h2> My Projects</h2>
         <p>Please check out some of the solo and group projects I've worked on!</p>
