--- a/source/partials/about.html.erb
+++ b/source/partials/about.html.erb
@@ -1,6 +1,6 @@
 <div class="row my-2">
   <div class="col-12">
-    <div class="container px-0">
+    <div>
       <div id="about">
         <h2>About me</h2>
         <div class="about-cards">
