--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -28,7 +28,7 @@
 .card-product img {
   height: 100%;
   width: 50%;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 4px 0 0 4px;
 }
 
