--- a/source/partials/social.html.erb
+++ b/source/partials/social.html.erb
@@ -1,4 +1,4 @@
-<div class="row my-2">
+<div class="row">
   <div class="col-12">
     <div id="contact">
       <div class="d-flex justify-content-center flex-wrap">
